--- a/index.html
+++ b/index.html
@@ -202,6 +202,7 @@
                                         aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" style="height: 14px">
                                         <div class="progress-bar" style="width: 75%" id="photoshop">75%</div>
                                     </div>
+                                    <div>Test</div>
                                 </div>
                                 <div>
                                     <p>HTML5</p>
