--- a/index.html
+++ b/index.html
@@ -201,8 +201,9 @@
                                     <div class="progress mb-4" role="progressbar" aria-label="Example 1px high"
                                         aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" style="height: 14px">
                                         <div class="progress-bar" style="width: 75%" id="photoshop">75%</div>
+                                        <div>This is my Third commit</div>
                                     </div>
-                                    <div>Test</div>
+                                    
                                 </div>
                                 <div>
                                     <p>HTML5</p>
